--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:ci": "vitest run --coverage"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -22,19 +22,17 @@
     "@eslint/js": "^9.33.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/svelte": "^5.2.9",
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/ui": "^4.0.15",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "happy-dom": "^20.0.11",
-    "jsdom": "^27.2.0",
-    "vite": "^5.4.10",
-    "vitest": "^1.6.0"
+    "jsdom": "^27.3.0",
+    "vite": "^7.1.2",
+    "vitest": "^4.0.15"
   }
 }
