--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,8 @@ steps:
       - npm ci
       - npm test -- --watch=false
     depends_on:
-      - backend-tests-sonar-qg
+      - backend-tests-and-sonar
+
 trigger:
   event:
     - pull_request
@@ -55,7 +56,7 @@ steps:
       - docker run -d --name backend-prod -p 8083:8080 aerolineas-backend-prod
       - docker run -d --name frontend-prod -p 8086:80 aerolineas-frontend-prod
       depends_on:
-      - build-images-dev
+      - build-images-prod
 
 volumes:
   - name: docker_sock
