--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,7 @@ steps:
     commands:
       - cd frontend
       - npm ci
+      - npm run build
       - npm test -- --watch=false
     depends_on:
       - backend-tests-sonar-qg
