--- a/.drone.yml
+++ b/.drone.yml
@@ -74,7 +74,7 @@ trigger:
   event:
     - pull_request
   branch:
-    - prod
+    - main
   status:
     - failure
 
@@ -159,6 +159,6 @@ trigger:
   event:
     - push
   branch:
-    - dev
+    - main
   status:
     - failure
