--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
         from_secret: sonar_host_URL
     commands:
       - cd backend
-      - mvn -B clean verify sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.qualitygate.wait=true
+      - mvn -B clean verify sonar:sonar -Dsonar.projectKey=aerolineas-backend-dev -Dsonar.login=$SONAR_TOKEN -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.qualitygate.wait=true
 
   - name: frontend-tests
     image: node:20
