--- a/.drone.yml
+++ b/.drone.yml
@@ -54,6 +54,7 @@ steps:
         from_secret: mail_from
       recipients:
         - dnatareno@unis.edu.gt
+        - jjalvarez@unis.edu.gt
         - msblanco@unis.edu.gt
         - kdieguez@unis.edu.gt
      
@@ -140,6 +141,7 @@ steps:
         from_secret: mail_from
       recipients:
         - dnatareno@unis.edu.gt
+        - jjalvarez@unis.edu.gt
         - msblanco@unis.edu.gt
         - kdieguez@unis.edu.gt
       
