--- a/.drone.yml
+++ b/.drone.yml
@@ -25,11 +25,40 @@ steps:
     depends_on:
       - backend-tests-and-sonar
 
+  - name: publish-pipeline-duration
+    image: alpine:3.20
+    environment:
+      DRONE_SERVER:
+        from_secret: DRONE_SERVER
+      DRONE_API_TOKEN:
+        from_secret: DRONE_API_TOKEN
+    commands:
+      - apk add --no-cache curl jq
+      - |
+        BUILD_JSON=$(curl -s \
+          -H "Authorization: Bearer $DRONE_API_TOKEN" \
+          "$DRONE_SERVER/api/repos/$DRONE_REPO/builds/$DRONE_BUILD_NUMBER")
+
+        STARTED=$(echo "$BUILD_JSON" | jq -r '.started')
+        FINISHED=$(echo "$BUILD_JSON" | jq -r '.finished')
+
+        if [ "$FINISHED" = "0" ] || [ -z "$FINISHED" ]; then
+          FINISHED=$(date +%s)
+        fi
+
+        DURATION=$((FINISHED - STARTED))
+        echo "Pipeline duration (s): $DURATION"
+
+        cat <<EOF | curl -s --data-binary @- http://pushgateway:9091/metrics/job/drone_pipeline_duration/repo/$DRONE_REPO/branch/$DRONE_BRANCH
+drone_pipeline_duration_seconds{repo="$DRONE_REPO",branch="$DRONE_BRANCH",pipeline="$DRONE_PIPELINE_NAME"} $DURATION
+EOF
+
 trigger:
   event:
     - pull_request
   branch:
     - main
+
 
 ---
 kind: pipeline
@@ -57,7 +86,7 @@ steps:
         - jjalvarez@unis.edu.gt
         - msblanco@unis.edu.gt
         - kdieguez@unis.edu.gt
-     
+
       subject: "[DRONE] Falló CI: ${DRONE_REPO} (${DRONE_BRANCH})"
       body: |
         Falló el pipeline: ${DRONE_STAGE_NAME}
@@ -119,6 +148,7 @@ trigger:
   branch:
     - main
 
+
 ---
 kind: pipeline
 type: docker
@@ -145,7 +175,7 @@ steps:
         - jjalvarez@unis.edu.gt
         - msblanco@unis.edu.gt
         - kdieguez@unis.edu.gt
-      
+
       subject: "[DRONE] Falló CD/Deploy: ${DRONE_REPO} (${DRONE_BRANCH})"
       body: |
         Falló el pipeline: ${DRONE_STAGE_NAME}
