--- a/.drone.yml
+++ b/.drone.yml
@@ -132,7 +132,7 @@ steps:
     commands:
       - docker stop backend-prod frontend-prod || true
       - docker rm backend-prod frontend-prod || true
-      - docker run -d --name backend-prod -p 8083:8080 aerolineas-backend-prod
+      - docker run -d --name --network ci-network backend-prod -p 8083:8080 aerolineas-backend-prod
       - docker run -d --name frontend-prod -p 8086:80 aerolineas-frontend-prod
     depends_on:
       - build-images-prod
