--- a/.drone.yml
+++ b/.drone.yml
@@ -28,37 +28,38 @@ steps:
   - name: publish-pipeline-duration
     image: alpine:3.20
     environment:
-      DRONE_SERVER:
-        from_secret: DRONE_SERVER
-      DRONE_API_TOKEN:
-        from_secret: DRONE_API_TOKEN
+      # Pushgateway expuesto en el HOST como 9092 -> contenedor:9091
+      PUSHGATEWAY_URL: http://172.17.0.1:9092
     commands:
-      - apk add --no-cache curl jq
+      - apk add --no-cache curl
       - |
-        BUILD_JSON=$(curl -s \
-          -H "Authorization: Bearer $DRONE_API_TOKEN" \
-          "$DRONE_SERVER/api/repos/$DRONE_REPO/builds/$DRONE_BUILD_NUMBER")
+        STARTED="${DRONE_BUILD_STARTED:-0}"
+        FINISHED="${DRONE_BUILD_FINISHED:-0}"
 
-        STARTED=$(echo "$BUILD_JSON" | jq -r '.started')
-        FINISHED=$(echo "$BUILD_JSON" | jq -r '.finished')
+        if [ -z "$STARTED" ] || [ "$STARTED" = "0" ]; then
+          STARTED=$(date +%s)
+        fi
 
-        if [ "$FINISHED" = "0" ] || [ -z "$FINISHED" ]; then
+        if [ -z "$FINISHED" ] || [ "$FINISHED" = "0" ]; then
           FINISHED=$(date +%s)
         fi
 
         DURATION=$((FINISHED - STARTED))
         echo "Pipeline duration (s): $DURATION"
 
-        cat <<EOF | curl -s --data-binary @- http://pushgateway:9091/metrics/job/drone_pipeline_duration/repo/$DRONE_REPO/branch/$DRONE_BRANCH
-        drone_pipeline_duration_seconds{repo="$DRONE_REPO",branch="$DRONE_BRANCH",pipeline="$DRONE_PIPELINE_NAME"} $DURATION
-        EOF
+        printf 'drone_pipeline_duration_seconds{repo="%s",branch="%s",pipeline="%s"} %s\n' \
+          "$DRONE_REPO" "$DRONE_BRANCH" "$DRONE_PIPELINE_NAME" "$DURATION" \
+          | curl -s --data-binary @- \
+          "$PUSHGATEWAY_URL/metrics/job/drone_pipeline_duration/repo/$DRONE_REPO/branch/$DRONE_BRANCH" \
+          || true
+    depends_on:
+      - frontend-tests
 
 trigger:
   event:
     - pull_request
   branch:
     - main
-
 
 ---
 kind: pipeline
