--- a/.drone.yml
+++ b/.drone.yml
@@ -27,33 +27,34 @@ steps:
 
   - name: publish-pipeline-duration
     image: alpine:3.20
-    environment:
-      # Pushgateway expuesto en el HOST como 9092 -> contenedor:9091
-      PUSHGATEWAY_URL: http://172.17.0.1:9092
     commands:
       - apk add --no-cache curl
       - |
-        STARTED="${DRONE_BUILD_STARTED:-0}"
-        FINISHED="${DRONE_BUILD_FINISHED:-0}"
+        set -e
 
-        if [ -z "$STARTED" ] || [ "$STARTED" = "0" ]; then
-          STARTED=$(date +%s)
-        fi
+        NOW="$(date +%s)"
 
-        if [ -z "$FINISHED" ] || [ "$FINISHED" = "0" ]; then
-          FINISHED=$(date +%s)
-        fi
+        # Drone suele exponer estos como epoch. Si vienen vacíos, usamos NOW.
+        STARTED="${DRONE_BUILD_STARTED:-$NOW}"
+        FINISHED="${DRONE_BUILD_FINISHED:-$NOW}"
+
+        # Si todavía no hay finished (0), usamos NOW.
+        [ "$STARTED" = "0" ] && STARTED="$NOW"
+        [ "$FINISHED" = "0" ] && FINISHED="$NOW"
 
         DURATION=$((FINISHED - STARTED))
         echo "Pipeline duration (s): $DURATION"
 
         printf 'drone_pipeline_duration_seconds{repo="%s",branch="%s",pipeline="%s"} %s\n' \
           "$DRONE_REPO" "$DRONE_BRANCH" "$DRONE_PIPELINE_NAME" "$DURATION" \
-          | curl -s --data-binary @- \
-          "$PUSHGATEWAY_URL/metrics/job/drone_pipeline_duration/repo/$DRONE_REPO/branch/$DRONE_BRANCH" \
-          || true
+          | curl -fsS --data-binary @- \
+          "http://pushgateway:9091/metrics/job/drone_pipeline_duration/repo/${DRONE_REPO}/branch/${DRONE_BRANCH}"
     depends_on:
       - frontend-tests
+    when:
+      status:
+        - success
+        - failure
 
 trigger:
   event:
@@ -109,7 +110,6 @@ trigger:
   status:
     - failure
 
-
 ---
 kind: pipeline
 type: docker
@@ -148,7 +148,6 @@ trigger:
     - push
   branch:
     - main
-
 
 ---
 kind: pipeline
