--- a/.drone.yml
+++ b/.drone.yml
@@ -28,38 +28,38 @@ steps:
   - name: publish-pipeline-duration
     image: alpine:3.20
     environment:
-      # Pushgateway expuesto en el HOST como 9092 -> contenedor:9091
-      PUSHGATEWAY_URL: http://172.17.0.1:9092
+      DRONE_SERVER:
+        from_secret: DRONE_SERVER
+      DRONE_API_TOKEN:
+        from_secret: DRONE_API_TOKEN
     commands:
-      - apk add --no-cache curl
+      - apk add --no-cache curl jq
       - |
-        STARTED="${DRONE_BUILD_STARTED:-0}"
-        FINISHED="${DRONE_BUILD_FINISHED:-0}"
+        set -e
 
-        if [ -z "$STARTED" ] || [ "$STARTED" = "0" ]; then
-          STARTED=$(date +%s)
-        fi
+        START_TS=$(date +%s)
 
-        if [ -z "$FINISHED" ] || [ "$FINISHED" = "0" ]; then
-          FINISHED=$(date +%s)
-        fi
+        while true; do
+          NOW=$(date +%s)
+          DURATION=$((NOW - START_TS))
 
-        DURATION=$((FINISHED - STARTED))
-        echo "Pipeline duration (s): $DURATION"
+          printf 'drone_pipeline_running_seconds{repo="%s",branch="%s",pipeline="%s"} %s\n' \
+            "$DRONE_REPO" "$DRONE_BRANCH" "$DRONE_PIPELINE_NAME" "$DURATION" \
+          | curl -fsS --data-binary @- \
+            http://pushgateway:9091/metrics/job/drone_pipeline_runtime/repo/$DRONE_REPO/branch/$DRONE_BRANCH
 
-        printf 'drone_pipeline_duration_seconds{repo="%s",branch="%s",pipeline="%s"} %s\n' \
-          "$DRONE_REPO" "$DRONE_BRANCH" "$DRONE_PIPELINE_NAME" "$DURATION" \
-          | curl -s --data-binary @- \
-          "$PUSHGATEWAY_URL/metrics/job/drone_pipeline_duration/repo/$DRONE_REPO/branch/$DRONE_BRANCH" \
-          || true
+          sleep 15
+        done
     depends_on:
       - frontend-tests
+    detach: true
 
 trigger:
   event:
     - pull_request
   branch:
     - main
+
 
 ---
 kind: pipeline
